<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text_1"
            android:text="Sign up"
            android:textColor="@color/md_red_400"
            android:textSize="20sp"
            android:gravity="center"/>

        <!-- Name Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textColorHint="@color/md_red_300">
            <EditText android:id="@+id/input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:hint="Name"

                android:textColorHint="@color/md_red_300"
                android:textColor="@color/md_red_300"/>
        </android.support.design.widget.TextInputLayout>

        <!--  Email Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textColorHint="@color/md_red_300"
            app:errorTextAppearance="@style/error_appearance">
            <EditText android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="Email"
                android:textColorHint="@color/md_red_300"
                android:textColor="@color/md_red_300"/>
        </android.support.design.widget.TextInputLayout>

        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textColorHint="@color/md_red_300">
            <EditText android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="Password"

                android:textColorHint="@color/md_red_300"
                android:textColor="@color/md_red_300"/>
        </android.support.design.widget.TextInputLayout>
        <!-- Phone Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textColorHint="@color/md_red_300">
            <EditText android:id="@+id/input_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:hint="Phone"

                android:textColorHint="@color/md_red_300"
                android:textColor="@color/md_red_300"/>
        </android.support.design.widget.TextInputLayout>

        <RadioGroup
            android:id="@+id/radioSex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:text="Gender"
                android:gravity="left"
                android:textSize="16sp"
                android:textColorHint="@color/md_red_300"
                android:textColor="@color/md_red_300"
                />
            <RadioButton
                android:id="@+id/radioMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_male"
                android:checked="true"
                android:textColor="@color/md_red_300"/>

            <RadioButton
                android:id="@+id/radioFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_female"
                android:textColor="@color/md_red_300"/>

        </RadioGroup>
        <!-- Blood Group-->
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/blood_group"
            android:gravity="left"
            android:textSize="16dip"

            android:textColorHint="@color/md_red_300"
            android:textColor="@color/md_red_300"
            />
        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/blood_group"
            android:prompt="@string/blood_prompt"
            android:background="@color/md_red_100"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            />
        <!-- Address Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textColorHint="@color/md_red_300">
            <EditText android:id="@+id/input_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="Address"
                android:textColorHint="@color/md_red_300"
                android:textColor="@color/md_red_300"/>
        </android.support.design.widget.TextInputLayout>

        <!-- Wieght Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textColorHint="@color/md_red_300">
            <EditText android:id="@+id/input_weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="Weight"
                android:textColorHint="@color/md_red_300"
                android:textColor="@color/md_red_300"/>

        </android.support.design.widget.TextInputLayout>
        <!-- No of times donated Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textColorHint="@color/md_red_300">
            <EditText android:id="@+id/input_ndonations"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="No of times Donated"
                android:textColorHint="@color/md_red_300"
                android:textColor="@color/md_red_300"/>

        </android.support.design.widget.TextInputLayout>
        <TextView android:id="@+id/input_lastd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textSize="16dip"
            android:hint="Last Donated"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textColorHint="@color/md_red_300"
            android:textColor="@color/md_red_300"/>
        <android.support.v7.widget.AppCompatCheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textColor="@color/md_red_300"
            android:text="Drinking habit"
            android:id="@+id/input_drink"
            />
        <!-- DOB donated Label -->
            <TextView android:id="@+id/input_dob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="D.O.B"
                android:textSize="16dip"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:textColorHint="@color/md_red_300"
                android:textColor="@color/md_red_300"/>
        <!-- Age donated Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textColorHint="@color/md_red_300">
            <EditText android:id="@+id/input_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="Age"
                android:textColorHint="@color/md_red_300"
                android:textColor="@color/md_red_300"/>
        </android.support.design.widget.TextInputLayout>
        <!-- Signup Button -->
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:text="Create Account"
            android:clickable="false"
            android:background="@color/md_red_300"
            android:textColor="@color/white"/>

        <TextView android:id="@+id/link_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="Already a member? Login"
            android:gravity="center"
            android:textSize="16dip"
            android:textColor="@color/md_red_400"
/>
    </LinearLayout>
</ScrollView>